style: Fix Dais spelling, show line breaks on staff side

--- a/client/src/staff-side/components/inbox/card/StandardCard.scoped.css
+++ b/client/src/staff-side/components/inbox/card/StandardCard.scoped.css
@@ -173,4 +173,5 @@
     font-size: 14px;
     word-wrap: break-word;
     margin-bottom: 20px;
+    white-space: pre-line;
 }
